updated coach contact

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,9 +22,9 @@ website:
         href: join.qmd
     tools:
       - icon: twitter
-        href: https://twitter.com/i/flow/login?redirect_after_login=%2FBobProwseGym
+        href: https://X.com/BobProwseGym
       - icon: instagram
-        href: https://www.instagram.com/bobprowsehealthclub/?hl=en
+        href: https://www.instagram.com/bobprowsehealthclub/
       - icon: facebook
         href: https://www.facebook.com/BobProwseGym/
 
